Changelog
=========

2.3a2 (unreleased)
------------------

- portlets/login.py, portlets/navigation.py:
  Don't use list as default parameter value.
  [kleist]

2.3a1 (2012-06-29)
------------------

- Make it possible to create portlets using z3c.form.
  [ggozad]

2.2.6 (unreleased)
------------------

- Remove hard dependency on Archetypes.
  [davisagli]

- accessibility improvements for screen readers regarding "more" links, see https://dev.plone.org/ticket/11982
  [rmattb, applied by polyester]

2.2.5 (2012-05-07)
------------------

- Changed the permission for members to be able to add portlets
  to their dashboards. ( https://dev.plone.org/ticket/11174 )
  [credits to buchi and jstegle, applied and tests by frapell]


2.2.4 (2012-04-15)
------------------

- Prevent buggy RSS feed to break page display.
  [patch by dieter, applied by kleist]

- Fix inherited local portlets for objects allowing locally-assigned
  portlets which are contained by an object that does not. [mitchellrj]

2.2.3 (2011-11-24)
------------------

- Do not display 'Manage portlets' when using portal_factory.
  https://dev.plone.org/ticket/12376
  [runyaga]

- Fixed the two high priority scenarios (global sections viewlet and nav
  portlet) of http://dev.plone.org/ticket/11189.
  [fulv]

- Reverted commit 5cb41ffea to fix #12279 and added a test for it.
  [zupo, jcerjak]


2.2.2 (2011-10-17)
------------------

- Fixed issue where the events, news and recent portlet would fail
  with a setting of no items (zero) shown due to a catalog sorting
  assertion.
  [malthe]

- Avoid empty <ul> tag in navigation_recurse.pt if bottomLevel is set.
  [gaudenzius]

- Enable possibility to delete portlets with missing implementation
  [do3cc]

- Replace use of deprecated skin template prefs_group_details with
  @@usergroup-groupdetails.
  [stefan]


2.2.1 - 2011-08-08
------------------
- Imporove tests readability. Merged from branches/2.1
  [gotcha]
